--- a/src/components/VideoDetails/VideoDetails.scss
+++ b/src/components/VideoDetails/VideoDetails.scss
@@ -4,6 +4,7 @@
 .video-details {
   &__title {
     @include desktop-border-padding-right;
+    max-width: 21em;
   }
 
   &__metadata {
