--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -77,5 +77,5 @@
 }
 
 @mixin max-character-width {
-  max-width: 75ch;
+  max-width: 80ch;
 }
